src/test/deca/syntax/valid/assign_expr.deca

// Description :
// Affectation avec expression (priorités +/*)
//
// Resultats :
// ok
//

{
    x = 1 + 2 * 3 ;
}