src/test/deca/syntax/invalid/token_inconnu.deca

//Erreur: token ** inconnu 

{
    int x = 2**3;
}